Fix HTML encoding issues in index.html

--- a/My portfolio/index.html
+++ b/My portfolio/index.html
@@ -65,8 +65,8 @@
                 </div>
                 <div class="about-card">
                     <h3>Education</h3>
-                    <p><strong>B.Sc in Computer Engineering</strong></p>
-                    <p>Independent University, Bangladesh</p>
+                    <p><strong>Engineering</strong></p>
+                    <p>ABC</p>
                     <p class="small-text">Minor - International Business. (Aug 2018 - Aug 2023)</p>
                 </div>
             </div>
@@ -214,3 +214,4 @@
 
 </body>
 </html>
+
